# gorilla-core

./: .gitignore  CMakeLists.txt  Core.hpp  Hash.cpp  Hash.hpp  PigeonHolePrinciple.hpp  README.md  Signal.hpp  Singleton.hpp  TypeDef.hpp  build.bat  libgorilla-core.pc.in
Class/: Class.hpp  ClassManager.cpp  ClassManager.hpp
Container/: Array.hpp  Container.cpp  Container.hpp  Dictionary.cpp  Dictionary.hpp  HashMap.hpp  Node.cpp  Node.hpp  Pair.hpp  Queue.hpp  Vector.hpp
Container/Shared/: AllocatorShared.hpp  QueueShared.hpp
File/: File.cpp  File.hpp  FileManager.cpp  FileManager.hpp  FileWatcher.cpp  FileWatcher.hpp
Helper/: Compression.cpp  Compression.hpp  Window.cpp  Window.hpp
Input/: Enum.hpp  Input.cpp  Input.hpp
Log/: LogManager.cpp  LogManager.hpp
Math/: Math.cpp  Math.hpp  Matrix33.cpp  Matrix33.hpp  Matrix44.cpp  Matrix44.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Memory/: Memory.cpp  Memory.hpp  MemoryAllocation.cpp  MemoryAllocation.hpp  MemoryDomain.cpp  MemoryDomain.hpp  MemoryManager.cpp  MemoryManager.hpp
Process/: Argument.cpp  Argument.hpp  ArgumentParser.cpp  ArgumentParser.hpp  Process.cpp  Process.hpp  TaskManager.cpp  TaskManager.hpp
Stream/: FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  MemoryReader.cpp  MemoryReader.hpp  MemoryWriter.cpp  MemoryWriter.hpp  StreamReader.hpp  StreamWriter.hpp
Stream/Dictionary/: DictionaryStream.cpp  DictionaryStream.hpp  DictionaryStreamJson.cpp  DictionaryStreamJson.hpp
String/: Path.cpp  Path.hpp  String.cpp  String.hpp  String16.cpp  String16.hpp  StringHelper.cpp  StringHelper.hpp
Thread/: ConditionVariable.cpp  ConditionVariable.hpp  Mutex.cpp  Mutex.hpp  Thread.cpp  Thread.hpp
Time/: Profiler.cpp  Profiler.hpp  Time.cpp  Time.hpp
src/: hash.cpp  hash.hpp  signal.hpp  singleton.hpp
src/container/: buffer_queue.cpp  buffer_queue.hpp  command_queue.cpp  command_queue.hpp  dictionary.cpp  dictionary.hpp  dictionary_data.hpp  dictionary_node.cpp  dictionary_node.hpp  hash_map.hpp  vector.hpp
src/file_system/: file.hpp  file_system.hpp  file_system_unix.cpp  file_system_windows.cpp  file_unix.cpp  file_windows.cpp  path.cpp  path.hpp
src/log/: log.cpp  log.hpp
src/memory/: memory.cpp  memory.hpp  memory_manager.cpp  memory_manager.hpp
src/process/: application.hpp  application_windows.cpp  command_line_parser.cpp  command_line_parser.hpp  commandline_parser.cpp  process.hpp  process_unix.cpp  process_windows.cpp
src/stream/: file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp  memory_reader.cpp  memory_reader.hpp  memory_writer.cpp  memory_writer.hpp  stream_reader.hpp  stream_writer.hpp
src/stream/dictionary/: dictionary_binary_stream.cpp  dictionary_binary_stream.hpp  dictionary_csv_stream.cpp  dictionary_csv_stream.hpp  dictionary_helper_stream.cpp  dictionary_helper_stream.hpp  dictionary_json_stream.cpp  dictionary_json_stream.hpp
src/string/: string.cpp  string.hpp  string16.cpp  string16.hpp  string_helper.cpp  string_helper.hpp
src/thread/: condition_variable.hpp  condition_variable_unix.cpp  condition_variable_windows.cpp  mutex.hpp  mutex_unix.cpp  mutex_windows.cpp  thread.hpp  thread_unix.cpp  thread_windows.cpp
src/time/: profiler.hpp  time.hpp  time_unix.cpp  time_windows.cpp
tests/: unit-tests.cpp
